--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,13 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v6
+      - name: Install Rust (nightly + wasm target)
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly
-          target: wasm32-unknown-unknown
-      - run: rustup target add wasm32-unknown-unknown
+          targets: wasm32-unknown-unknown
       - run: cargo install trunk
 
       - name: Build Yew App
