--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,17 +12,17 @@ jobs:
       - name: Install Rust (nightly + wasm target)
         uses: dtolnay/rust-toolchain@nightly
         with:
-          targets: wasm32-unknown-unknown
+          target: wasm32-unknown-unknown
       - run: cargo install trunk
 
       - name: Build Yew App
-        run: trunk build --release --dist ./app --public-url /stepvisualizer/
+        run: trunk build --release --dist ./dist --public-url /stepvisualizer/
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v5
         with:
           name: app-dist
-          path: ./app
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -34,15 +34,15 @@ jobs:
         uses: actions/download-artifact@v5
         with:
           name: app-dist
-          path: ./app
+          path: ./dist
       
       #? I guess we need to cheat 404 errors
       - name: Copy index.html to 404.html
-        run: cp ./app/index.html ./app/404.html
+        run: cp ./dist/index.html ./dist/404.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./app
+          publish_dir: ./dist
           publish_branch: gh-pages
