--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,8 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Install Rust (nightly + wasm target)
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@master
         with:
+          toolchain: nightly-2025-11-07
           target: wasm32-unknown-unknown
       - run: cargo install trunk
 
